tests/syntax-error/redeclare.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g redeclare.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: redeclare.silly:8:1: error: Variable x already declared
// CHECK:     8 | FLOAT64 x;
// CHECK:       | ^

FLOAT64 x;
FLOAT64 x;
x = 1;
PRINT x;
